libraries/ckit/regression/invalid-programs/r56.c
int f(static int x) {
 return(0);
}

main(){
 return(0);
}
